netmaumau (0.4) UNRELEASED; urgency=low

  * If a player has lost due a played out Jack, the points are doubled

 -- Heiko Schäfer <heiko@rangun.de>  Sat, 29 Nov 2014 20:07:37 +0100

netmaumau (0.3) UNRELEASED; urgency=low

  * On Win32 systems every log message gets flushed afterwards
  * Support for up to 4 AI players

 -- Heiko Schäfer <heiko@rangun.de>  Wed, 26 Nov 2014 12:28:36 +0100

netmaumau (0.2) UNRELEASED; urgency=low

  * Initial release

 -- Heiko Schäfer <heiko@rangun.de>  Sat, 01 Nov 2014 17:38:01 +0100